2009-12-14  Nick Clifton  <nickc@redhat.com>

	PR binutils/10924
	* arm-dis.c (arm_opcodes): Specify %R in cases where using r15
	results in unpredictable behaviour.
	(print_insn_arm): Handle %R.

2009-12-11  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (get_valid_dis386): Set vex.w to 0 for VEX C5
	prefix.
	(print_insn): Don't set vex.w here.

2009-12-11  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (print_insn): Set vex.w to 0.

2009-12-11  Quentin Neill  <quentin.neill@amd.com>

	* i386-dis.c (get_vex_imm8): Extend logic to apply in all cases,
	to avoid fetching ahead for the immediate bytes when OP_E_memory
	has already been called.  Fix indentation.

2009-12-11  Nick Clifton  <nickc@redhat.com>

	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* arm-dis.c: Fix shadowed variable warnings.
	* cgen-opc.c: Likewise.
	* cr16-dis.c: Likewise.
	* crx-dis.c: Likewise.
	* d30v-dis.c: Likewise.
	* fr30-dis.c: Likewise.
	* frv-opc.c: Likewise.
	* h8500-dis.c: Likewise.
	* i386-dis.c: Likewise.
	* i960-dis.c: Likewise.
	* ia64-gen.c: Likewise.
	* ia64-opc.c: Likewise.
	* m32c-asm.c: Likewise.
	* m32c-dis.c: Likewise.
	* m68k-dis.c: Likewise.
	* maxq-dis.c: Likewise.
	* mcore-dis.c: Likewise.
	* mep-asm.c: Likewise.
	* microblaze-dis.c: Likewise.
	* mmix-dis.c: Likewise.
	* ns32k-dis.c: Likewise.
	* or32-opc.c: Likewise.
	* s390-dis.c: Likewise.
	* sh64-dis.c: Likewise.
	* spu-dis.c: Likewise.
	* tic30-dis.c: Likewise.

2009-12-09  Nick Clifton  <nickc@redhat.com>

	PR 10924
	* arm-dis.c (print_insn_arm): Mark insns that use the PC in
	post-indexed addressing as unpredictable.

2009-12-03  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (FXSAVE_Fixup): New.
	(FXSAVE): Likewise.
	(mod_table): Use FXSAVE on fxsave and fxrstor.

	* i386-opc.tbl: Add fxsave64 and fxrstor64.
	* i386-tbl.h: Regenerated.

2009-12-02  Nick Clifton  <nickc@redhat.com>
	    Richard Earnshaw  <rearnsha@arm.com>

	PR gas/11013